добавив декоративні елементи

--- a/index.html
+++ b/index.html
@@ -40,12 +40,20 @@
         </nav>
         <ul class="list contact-nav">
           <li class="item">
-            <a class="link" href="mailto:info@devstudio.com"
-              >info@devstudio.com</a
+            <a class="link" href="mailto:info@devstudio.com">
+              <svg class="contact-nav-icon" width="16" height="12">
+                <use href="./img/symbol-defs.svg#icon-envelope"></use>
+              </svg>
+              info@devstudio.com</a
             >
           </li>
           <li class="item">
-            <a class="link" href="tel:+380961111111">+38 096 111 11 11</a>
+            <a class="link" href="tel:+380961111111">
+              <svg class="contact-nav-icon" width="10" height="16">
+                <use href="./img/symbol-defs.svg#icon-smartphone"></use>
+              </svg>
+              +38 096 111 11 11</a
+            >
           </li>
         </ul>
       </div>
@@ -69,6 +77,11 @@
           <h2 class="title features-title visually-hidden">Особливості</h2>
           <ul class="list features-list">
             <li class="features-item">
+              <div class="icon-element">
+                <svg class="icon-header" width="70" height="70">
+                  <use href="./img/symbol-defs.svg#icon-antenna"></use>
+                </svg>
+              </div>
               <h3 class="title features-item-title">УВАГА ДО ДЕТАЛЕЙ</h3>
               <p class="text features-item-text">
                 Ідейні міркування, і навіть початок повсякденної роботи з
@@ -76,6 +89,11 @@
               </p>
             </li>
             <li class="features-item">
+              <div class="icon-element">
+                <svg class="icon-header" width="70" height="70">
+                  <use href="./img/symbol-defs.svg#icon-clock"></use>
+                </svg>
+              </div>
               <h3 class="title features-item-title">ПУНКТУАЛЬНІСТЬ</h3>
               <p class="text features-item-text">
                 Завдання організації, особливо рамки і місце навчання кадрів
@@ -83,12 +101,22 @@
               </p>
             </li>
             <li class="features-item">
+              <div class="icon-element">
+                <svg class="icon-header" width="70" height="70">
+                  <use href="./img/symbol-defs.svg#icon-diagram"></use>
+                </svg>
+              </div>
               <h3 class="title features-item-title">ПЛАНУВАННЯ</h3>
               <p class="text features-item-text">
                 Так само консультація з широким активом значною мірою зумовлює.
               </p>
             </li>
             <li class="features-item">
+              <div class="icon-element">
+                <svg class="icon-header" width="70" height="70">
+                  <use href="./img/symbol-defs.svg#icon-astronaut"></use>
+                </svg>
+              </div>
               <h3 class="title features-item-title">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
               <p class="text features-item-text">
                 Значимість цих проблем настільки очевидна, що реалізація
@@ -131,6 +159,28 @@
               <div class="item-descr">
                 <h3 class="title">Ігор Дем'яненко</h3>
                 <p class="text">Product Designer</p>
+                <div class="icon-wrap">
+                  <a href="" class="link-icon">
+                    <svg class="icon-social" width="20" height="20">
+                      <use href="./img/symbol-defs.svg#icon-instagram"></use>
+                    </svg>
+                  </a>
+                  <a href="" class="link-icon">
+                    <svg class="icon-social" width="20" height="20">
+                      <use href="./img/symbol-defs.svg#icon-twitter"></use>
+                    </svg>
+                  </a>
+                  <a href="" class="link-icon">
+                    <svg class="icon-social" width="20" height="20">
+                      <use href="./img/symbol-defs.svg#icon-facebook"></use>
+                    </svg>
+                  </a>
+                  <a href="" class="link-icon">
+                    <svg class="icon-social" width="20" height="20">
+                      <use href="./img/symbol-defs.svg#icon-linkedin"></use>
+                    </svg>
+                  </a>
+                </div>
               </div>
             </li>
             <li class="item">
@@ -138,6 +188,28 @@
               <div class="item-descr">
                 <h3 class="title">Ольга Рєпіна</h3>
                 <p class="text">Frontend Developer</p>
+                <div class="icon-wrap">
+                  <a href="" class="link-icon">
+                    <svg class="icon-social" width="20" height="20">
+                      <use href="./img/symbol-defs.svg#icon-instagram"></use>
+                    </svg>
+                  </a>
+                  <a href="" class="link-icon">
+                    <svg class="icon-social" width="20" height="20">
+                      <use href="./img/symbol-defs.svg#icon-twitter"></use>
+                    </svg>
+                  </a>
+                  <a href="" class="link-icon">
+                    <svg class="icon-social" width="20" height="20">
+                      <use href="./img/symbol-defs.svg#icon-facebook"></use>
+                    </svg>
+                  </a>
+                  <a href="" class="link-icon">
+                    <svg class="icon-social" width="20" height="20">
+                      <use href="./img/symbol-defs.svg#icon-linkedin"></use>
+                    </svg>
+                  </a>
+                </div>
               </div>
             </li>
             <li class="item">
@@ -145,6 +217,28 @@
               <div class="item-descr">
                 <h3 class="title">Микола Тарасов</h3>
                 <p class="text">Marketing</p>
+                <div class="icon-wrap">
+                  <a href="" class="link-icon">
+                    <svg class="icon-social" width="20" height="20">
+                      <use href="./img/symbol-defs.svg#icon-instagram"></use>
+                    </svg>
+                  </a>
+                  <a href="" class="link-icon">
+                    <svg class="icon-social" width="20" height="20">
+                      <use href="./img/symbol-defs.svg#icon-twitter"></use>
+                    </svg>
+                  </a>
+                  <a href="" class="link-icon">
+                    <svg class="icon-social" width="20" height="20">
+                      <use href="./img/symbol-defs.svg#icon-facebook"></use>
+                    </svg>
+                  </a>
+                  <a href="" class="link-icon">
+                    <svg class="icon-social" width="20" height="20">
+                      <use href="./img/symbol-defs.svg#icon-linkedin"></use>
+                    </svg>
+                  </a>
+                </div>
               </div>
             </li>
             <li class="item">
@@ -152,6 +246,28 @@
               <div class="item-descr">
                 <h3 class="title">Михайло Єрмаков</h3>
                 <p class="text">UI Designer</p>
+                <div class="icon-wrap">
+                  <a href="" class="link-icon">
+                    <svg class="icon-social" width="20" height="20">
+                      <use href="./img/symbol-defs.svg#icon-instagram"></use>
+                    </svg>
+                  </a>
+                  <a href="" class="link-icon">
+                    <svg class="icon-social" width="20" height="20">
+                      <use href="./img/symbol-defs.svg#icon-twitter"></use>
+                    </svg>
+                  </a>
+                  <a href="" class="link-icon">
+                    <svg class="icon-social" width="20" height="20">
+                      <use href="./img/symbol-defs.svg#icon-facebook"></use>
+                    </svg>
+                  </a>
+                  <a href="" class="link-icon">
+                    <svg class="icon-social" width="20" height="20">
+                      <use href="./img/symbol-defs.svg#icon-linkedin"></use>
+                    </svg>
+                  </a>
+                </div>
               </div>
             </li>
           </ul>
@@ -159,10 +275,61 @@
       </section>
     </main>
 
+    <!-- Постійні клієнти -->
+    <section class="section clients">
+      <div class="container">
+        <h2 class="title clients-title">Постійні клієнти</h2>
+        <ul class="list clients-list">
+          <li class="item">
+            <a class="link-icon" href="">
+              <svg class="icon-clients" width="106" height="60">
+                <use href="./img/symbol-defs.svg#icon-logo-1"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="item">
+            <a class="link-icon" href="">
+              <svg class="icon-clients" width="106" height="60">
+                <use href="./img/symbol-defs.svg#icon-logo-2"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="item">
+            <a class="link-icon" href="">
+              <svg class="icon-clients" width="106" height="60">
+                <use href="./img/symbol-defs.svg#icon-Logo-3"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="item">
+            <a class="link-icon" href="">
+              <svg class="icon-clients" width="106" height="60">
+                <use href="./img/symbol-defs.svg#icon-logo-4"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="item">
+            <a class="link-icon" href="">
+              <svg class="icon-clients" width="106" height="60">
+                <use href="./img/symbol-defs.svg#icon-logo-5"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="item">
+            <a class="link-icon" href="">
+              <svg class="icon-clients" width="106" height="60">
+                <use href="./img/symbol-defs.svg#icon-logo-6"></use>
+              </svg>
+            </a>
+          </li>
+        </ul>
+      </div>
+    </section>
+
     <!-- Футер сайту -->
     <footer class="site-footer">
-      <div class="container">
-        <div class="contacts">
+      <div class="container flex-container">
+        <div class="footer-contacts">
           <a class="link logo" href="./index.html"><span>Web</span>Studio</a>
           <address class="address">
             <ul class="list">
@@ -179,6 +346,39 @@
               </li>
             </ul>
           </address>
+        </div>
+        <div class="footer-socials">
+          <p class="text-icon">приєднуйтесь</p>
+          <ul class="list list-icon">
+            <li class="item">
+              <a class="link-icon" href="">
+                <svg class="" width="20" height="20">
+                  <use href="./img/symbol-defs.svg#icon-instagram"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="item">
+              <a class="link-icon" href="">
+                <svg class="" width="20" height="20">
+                  <use href="./img/symbol-defs.svg#icon-twitter"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="item">
+              <a class="link-icon" href="">
+                <svg class="" width="20" height="20">
+                  <use href="./img/symbol-defs.svg#icon-facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="item">
+              <a class="link-icon" href="">
+                <svg class="" width="20" height="20">
+                  <use href="./img/symbol-defs.svg#icon-linkedin"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
         </div>
       </div>
     </footer>
