--- a/portfolio.html
+++ b/portfolio.html
@@ -28,10 +28,10 @@
           <a class="link logo" href="./index.html"><span>Web</span>Studio</a>
           <ul class="list site-nav">
             <li class="item">
-              <a class="link" href="./index.html">Студія</a>
+              <a class="link current" href="./index.html">Студія</a>
             </li>
             <li class="item">
-              <a class="link current" href="./portfolio.html">Портфоліо</a>
+              <a class="link" href="./portfolio.html">Портфоліо</a>
             </li>
             <li class="item">
               <a class="link" href="./contacts.html">Контакти</a>
@@ -40,12 +40,20 @@
         </nav>
         <ul class="list contact-nav">
           <li class="item">
-            <a class="link" href="mailto:info@devstudio.com"
-              >info@devstudio.com</a
+            <a class="link" href="mailto:info@devstudio.com">
+              <svg class="contact-nav-icon" width="16" height="12">
+                <use href="./img/symbol-defs.svg#icon-envelope"></use>
+              </svg>
+              info@devstudio.com</a
             >
           </li>
           <li class="item">
-            <a class="link" href="tel:+380961111111">+38 096 111 11 11</a>
+            <a class="link" href="tel:+380961111111">
+              <svg class="contact-nav-icon" width="10" height="16">
+                <use href="./img/symbol-defs.svg#icon-smartphone"></use>
+              </svg>
+              +38 096 111 11 11</a
+            >
           </li>
         </ul>
       </div>
@@ -80,7 +88,7 @@
           <!-- Список наших робіт -->
           <ul class="list portfolio-list">
             <li class="item">
-              <a href="">
+              <a class="link-portfolio" href="">
                 <img src="./img/tehnokriak.jpg" alt="Технокряк" width="370" />
                 <div class="portfolio-descr">
                   <h2 class="title portfolio-title">Технокряк</h2>
@@ -89,7 +97,7 @@
               </a>
             </li>
             <li class="item">
-              <a href="">
+              <a class="link-portfolio" href="">
                 <img
                   src="./img/neworlean.jpg"
                   alt="Постер New Orlean vs Golden Star"
@@ -104,7 +112,7 @@
               </a>
             </li>
             <li class="item">
-              <a href="">
+              <a class="link-portfolio" href="">
                 <img
                   src="./img/seafood.jpg"
                   alt="Ресторан Seafood"
@@ -117,7 +125,7 @@
               </a>
             </li>
             <li class="item">
-              <a href="">
+              <a class="link-portfolio" href="">
                 <img src="./img/prime.jpg" alt="Проєкт Prime" width="370" />
                 <div class="portfolio-descr">
                   <h2 class="title portfolio-title">Проєкт Prime</h2>
@@ -126,7 +134,7 @@
               </a>
             </li>
             <li class="item">
-              <a href="">
+              <a class="link-portfolio" href="">
                 <img src="./img/boxes.jpg" alt="Проєкт Boxes" width="370" />
                 <div class="portfolio-descr">
                   <h2 class="title portfolio-title">Проєкт Boxes</h2>
@@ -135,7 +143,7 @@
               </a>
             </li>
             <li class="item">
-              <a href="">
+              <a class="link-portfolio" href="">
                 <img
                   src="./img/inspiration.jpg"
                   alt="Inspiration has no Borders"
@@ -150,7 +158,7 @@
               </a>
             </li>
             <li class="item">
-              <a href="">
+              <a class="link-portfolio" href="">
                 <img
                   src="./img/limited.jpg"
                   alt="Видання Limited Edition"
@@ -163,7 +171,7 @@
               </a>
             </li>
             <li class="item">
-              <a href="">
+              <a class="link-portfolio" href="">
                 <img src="./img/lab.jpg" alt="Проєкт LAB" width="370" />
                 <div class="portfolio-descr">
                   <h2 class="title portfolio-title">Проєкт LAB</h2>
@@ -172,7 +180,7 @@
               </a>
             </li>
             <li class="item">
-              <a href="">
+              <a class="link-portfolio" href="">
                 <img
                   src="./img/growing.jpg"
                   alt="Growing Business"
@@ -191,8 +199,8 @@
 
     <!-- Футер сайту -->
     <footer class="site-footer">
-      <div class="container">
-        <div class="contacts">
+      <div class="container flex-container">
+        <div class="footer-contacts">
           <a class="link logo" href="./index.html"><span>Web</span>Studio</a>
           <address class="address">
             <ul class="list">
@@ -209,6 +217,39 @@
               </li>
             </ul>
           </address>
+        </div>
+        <div class="footer-socials">
+          <p class="text-icon">приєднуйтесь</p>
+          <ul class="list list-icon">
+            <li class="item">
+              <a class="link-icon" href="">
+                <svg class="" width="20" height="20">
+                  <use href="./img/symbol-defs.svg#icon-instagram"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="item">
+              <a class="link-icon" href="">
+                <svg class="" width="20" height="20">
+                  <use href="./img/symbol-defs.svg#icon-twitter"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="item">
+              <a class="link-icon" href="">
+                <svg class="" width="20" height="20">
+                  <use href="./img/symbol-defs.svg#icon-facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="item">
+              <a class="link-icon" href="">
+                <svg class="" width="20" height="20">
+                  <use href="./img/symbol-defs.svg#icon-linkedin"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
         </div>
       </div>
     </footer>
