виправив ховер на іконках, тіні

--- a/portfolio.html
+++ b/portfolio.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>WebStudio</title>
+    <title>Портфоліо</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -89,7 +89,9 @@
           <ul class="list portfolio-list">
             <li class="item">
               <a class="link-portfolio" href="">
-                <img src="./img/tehnokriak.jpg" alt="Технокряк" width="370" />
+                <div class="portfolio-thumb">
+                  <img src="./img/tehnokriak.jpg" alt="Технокряк" width="370" />
+                </div>
                 <div class="portfolio-descr">
                   <h2 class="title portfolio-title">Технокряк</h2>
                   <p class="text">Веб-сайт</p>
@@ -98,11 +100,13 @@
             </li>
             <li class="item">
               <a class="link-portfolio" href="">
-                <img
-                  src="./img/neworlean.jpg"
-                  alt="Постер New Orlean vs Golden Star"
-                  width="370"
-                />
+                <div class="portfolio-thumb">
+                  <img
+                    src="./img/neworlean.jpg"
+                    alt="Постер New Orlean vs Golden Star"
+                    width="370"
+                  />
+                </div>
                 <div class="portfolio-descr">
                   <h2 class="title portfolio-title">
                     Постер New Orlean vs Golden Star
@@ -113,11 +117,13 @@
             </li>
             <li class="item">
               <a class="link-portfolio" href="">
-                <img
-                  src="./img/seafood.jpg"
-                  alt="Ресторан Seafood"
-                  width="370"
-                />
+                <div class="portfolio-thumb">
+                  <img
+                    src="./img/seafood.jpg"
+                    alt="Ресторан Seafood"
+                    width="370"
+                  />
+                </div>
                 <div class="portfolio-descr">
                   <h2 class="title portfolio-title">Ресторан Seafood</h2>
                   <p class="text">Додаток</p>
@@ -126,7 +132,9 @@
             </li>
             <li class="item">
               <a class="link-portfolio" href="">
-                <img src="./img/prime.jpg" alt="Проєкт Prime" width="370" />
+                <div class="portfolio-thumb">
+                  <img src="./img/prime.jpg" alt="Проєкт Prime" width="370" />
+                </div>
                 <div class="portfolio-descr">
                   <h2 class="title portfolio-title">Проєкт Prime</h2>
                   <p class="text">Маркетинг</p>
@@ -135,7 +143,9 @@
             </li>
             <li class="item">
               <a class="link-portfolio" href="">
-                <img src="./img/boxes.jpg" alt="Проєкт Boxes" width="370" />
+                <div class="portfolio-thumb">
+                  <img src="./img/boxes.jpg" alt="Проєкт Boxes" width="370" />
+                </div>
                 <div class="portfolio-descr">
                   <h2 class="title portfolio-title">Проєкт Boxes</h2>
                   <p class="text">Додаток</p>
@@ -144,11 +154,13 @@
             </li>
             <li class="item">
               <a class="link-portfolio" href="">
-                <img
-                  src="./img/inspiration.jpg"
-                  alt="Inspiration has no Borders"
-                  width="370"
-                />
+                <div class="portfolio-thumb">
+                  <img
+                    src="./img/inspiration.jpg"
+                    alt="Inspiration has no Borders"
+                    width="370"
+                  />
+                </div>
                 <div class="portfolio-descr">
                   <h2 class="title portfolio-title">
                     Inspiration has no Borders
@@ -159,11 +171,13 @@
             </li>
             <li class="item">
               <a class="link-portfolio" href="">
-                <img
-                  src="./img/limited.jpg"
-                  alt="Видання Limited Edition"
-                  width="370"
-                />
+                <div class="portfolio-thumb">
+                  <img
+                    src="./img/limited.jpg"
+                    alt="Видання Limited Edition"
+                    width="370"
+                  />
+                </div>
                 <div class="portfolio-descr">
                   <h2 class="title portfolio-title">Видання Limited Edition</h2>
                   <p class="text">Дизайн</p>
@@ -172,7 +186,9 @@
             </li>
             <li class="item">
               <a class="link-portfolio" href="">
-                <img src="./img/lab.jpg" alt="Проєкт LAB" width="370" />
+                <div class="portfolio-thumb">
+                  <img src="./img/lab.jpg" alt="Проєкт LAB" width="370" />
+                </div>
                 <div class="portfolio-descr">
                   <h2 class="title portfolio-title">Проєкт LAB</h2>
                   <p class="text">Маркетинг</p>
@@ -181,11 +197,13 @@
             </li>
             <li class="item">
               <a class="link-portfolio" href="">
-                <img
-                  src="./img/growing.jpg"
-                  alt="Growing Business"
-                  width="370"
-                />
+                <div class="portfolio-thumb">
+                  <img
+                    src="./img/growing.jpg"
+                    alt="Growing Business"
+                    width="370"
+                  />
+                </div>
                 <div class="portfolio-descr">
                   <h2 class="title portfolio-title">Growing Business</h2>
                   <p class="text">Додаток</p>
@@ -202,9 +220,13 @@
       <div class="container flex-container">
         <div class="footer-contacts">
           <a class="link logo" href="./index.html"><span>Web</span>Studio</a>
-          <address class="address">
-            <ul class="list">
-              <li class="item"><span>м. Київ, пр-т Лесі Українки, 26</span></li>
+          <address>
+            <ul class="list address">
+              <li class="item">
+                <a class="link address" href=""
+                  >м. Київ, пр-т Лесі Українки, 26</a
+                >
+              </li>
               <li class="item">
                 <a class="link mail" href="mailto:info@devstudio.com"
                   >info@devstudio.com</a
