--- a/index.html
+++ b/index.html
@@ -159,28 +159,37 @@
               <div class="item-descr">
                 <h3 class="title">Ігор Дем'яненко</h3>
                 <p class="text">Product Designer</p>
-                <div class="icon-wrap">
-                  <a href="" class="link-icon">
-                    <svg class="icon-social" width="20" height="20">
-                      <use href="./img/symbol-defs.svg#icon-instagram"></use>
-                    </svg>
-                  </a>
-                  <a href="" class="link-icon">
-                    <svg class="icon-social" width="20" height="20">
-                      <use href="./img/symbol-defs.svg#icon-twitter"></use>
-                    </svg>
-                  </a>
-                  <a href="" class="link-icon">
-                    <svg class="icon-social" width="20" height="20">
-                      <use href="./img/symbol-defs.svg#icon-facebook"></use>
-                    </svg>
-                  </a>
-                  <a href="" class="link-icon">
-                    <svg class="icon-social" width="20" height="20">
-                      <use href="./img/symbol-defs.svg#icon-linkedin"></use>
-                    </svg>
-                  </a>
-                </div>
+
+                <ul class="list icon-wrap">
+                  <li class="">
+                    <a href="" class="link-icon">
+                      <svg class="icon-social" width="20" height="20">
+                        <use href="./img/symbol-defs.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="">
+                    <a href="" class="link-icon">
+                      <svg class="icon-social" width="20" height="20">
+                        <use href="./img/symbol-defs.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="">
+                    <a href="" class="link-icon">
+                      <svg class="icon-social" width="20" height="20">
+                        <use href="./img/symbol-defs.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="">
+                    <a href="" class="link-icon">
+                      <svg class="icon-social" width="20" height="20">
+                        <use href="./img/symbol-defs.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="item">
@@ -188,28 +197,36 @@
               <div class="item-descr">
                 <h3 class="title">Ольга Рєпіна</h3>
                 <p class="text">Frontend Developer</p>
-                <div class="icon-wrap">
-                  <a href="" class="link-icon">
-                    <svg class="icon-social" width="20" height="20">
-                      <use href="./img/symbol-defs.svg#icon-instagram"></use>
-                    </svg>
-                  </a>
-                  <a href="" class="link-icon">
-                    <svg class="icon-social" width="20" height="20">
-                      <use href="./img/symbol-defs.svg#icon-twitter"></use>
-                    </svg>
-                  </a>
-                  <a href="" class="link-icon">
-                    <svg class="icon-social" width="20" height="20">
-                      <use href="./img/symbol-defs.svg#icon-facebook"></use>
-                    </svg>
-                  </a>
-                  <a href="" class="link-icon">
-                    <svg class="icon-social" width="20" height="20">
-                      <use href="./img/symbol-defs.svg#icon-linkedin"></use>
-                    </svg>
-                  </a>
-                </div>
+                <ul class="list icon-wrap">
+                  <li class="">
+                    <a href="" class="link-icon">
+                      <svg class="icon-social" width="20" height="20">
+                        <use href="./img/symbol-defs.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="">
+                    <a href="" class="link-icon">
+                      <svg class="icon-social" width="20" height="20">
+                        <use href="./img/symbol-defs.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="">
+                    <a href="" class="link-icon">
+                      <svg class="icon-social" width="20" height="20">
+                        <use href="./img/symbol-defs.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="">
+                    <a href="" class="link-icon">
+                      <svg class="icon-social" width="20" height="20">
+                        <use href="./img/symbol-defs.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="item">
@@ -217,28 +234,36 @@
               <div class="item-descr">
                 <h3 class="title">Микола Тарасов</h3>
                 <p class="text">Marketing</p>
-                <div class="icon-wrap">
-                  <a href="" class="link-icon">
-                    <svg class="icon-social" width="20" height="20">
-                      <use href="./img/symbol-defs.svg#icon-instagram"></use>
-                    </svg>
-                  </a>
-                  <a href="" class="link-icon">
-                    <svg class="icon-social" width="20" height="20">
-                      <use href="./img/symbol-defs.svg#icon-twitter"></use>
-                    </svg>
-                  </a>
-                  <a href="" class="link-icon">
-                    <svg class="icon-social" width="20" height="20">
-                      <use href="./img/symbol-defs.svg#icon-facebook"></use>
-                    </svg>
-                  </a>
-                  <a href="" class="link-icon">
-                    <svg class="icon-social" width="20" height="20">
-                      <use href="./img/symbol-defs.svg#icon-linkedin"></use>
-                    </svg>
-                  </a>
-                </div>
+                <ul class="list icon-wrap">
+                  <li class="">
+                    <a href="" class="link-icon">
+                      <svg class="icon-social" width="20" height="20">
+                        <use href="./img/symbol-defs.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="">
+                    <a href="" class="link-icon">
+                      <svg class="icon-social" width="20" height="20">
+                        <use href="./img/symbol-defs.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="">
+                    <a href="" class="link-icon">
+                      <svg class="icon-social" width="20" height="20">
+                        <use href="./img/symbol-defs.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="">
+                    <a href="" class="link-icon">
+                      <svg class="icon-social" width="20" height="20">
+                        <use href="./img/symbol-defs.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="item">
@@ -246,94 +271,106 @@
               <div class="item-descr">
                 <h3 class="title">Михайло Єрмаков</h3>
                 <p class="text">UI Designer</p>
-                <div class="icon-wrap">
-                  <a href="" class="link-icon">
-                    <svg class="icon-social" width="20" height="20">
-                      <use href="./img/symbol-defs.svg#icon-instagram"></use>
-                    </svg>
-                  </a>
-                  <a href="" class="link-icon">
-                    <svg class="icon-social" width="20" height="20">
-                      <use href="./img/symbol-defs.svg#icon-twitter"></use>
-                    </svg>
-                  </a>
-                  <a href="" class="link-icon">
-                    <svg class="icon-social" width="20" height="20">
-                      <use href="./img/symbol-defs.svg#icon-facebook"></use>
-                    </svg>
-                  </a>
-                  <a href="" class="link-icon">
-                    <svg class="icon-social" width="20" height="20">
-                      <use href="./img/symbol-defs.svg#icon-linkedin"></use>
-                    </svg>
-                  </a>
-                </div>
+                <ul class="list icon-wrap">
+                  <li class="">
+                    <a href="" class="link-icon">
+                      <svg class="icon-social" width="20" height="20">
+                        <use href="./img/symbol-defs.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="">
+                    <a href="" class="link-icon">
+                      <svg class="icon-social" width="20" height="20">
+                        <use href="./img/symbol-defs.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="">
+                    <a href="" class="link-icon">
+                      <svg class="icon-social" width="20" height="20">
+                        <use href="./img/symbol-defs.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="">
+                    <a href="" class="link-icon">
+                      <svg class="icon-social" width="20" height="20">
+                        <use href="./img/symbol-defs.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
+            </li>
+          </ul>
+        </div>
+      </section>
+
+      <!-- Постійні клієнти -->
+      <section class="section clients">
+        <div class="container">
+          <h2 class="title clients-title">Постійні клієнти</h2>
+          <ul class="list clients-list">
+            <li class="item">
+              <a class="link-icon" href="">
+                <svg class="icon-clients" width="106" height="60">
+                  <use href="./img/symbol-defs.svg#icon-logo-1"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="item">
+              <a class="link-icon" href="">
+                <svg class="icon-clients" width="106" height="60">
+                  <use href="./img/symbol-defs.svg#icon-logo-2"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="item">
+              <a class="link-icon" href="">
+                <svg class="icon-clients" width="106" height="60">
+                  <use href="./img/symbol-defs.svg#icon-logo-3"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="item">
+              <a class="link-icon" href="">
+                <svg class="icon-clients" width="106" height="60">
+                  <use href="./img/symbol-defs.svg#icon-logo-4"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="item">
+              <a class="link-icon" href="">
+                <svg class="icon-clients" width="106" height="60">
+                  <use href="./img/symbol-defs.svg#icon-logo-5"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="item">
+              <a class="link-icon" href="">
+                <svg class="icon-clients" width="106" height="60">
+                  <use href="./img/symbol-defs.svg#icon-logo-6"></use>
+                </svg>
+              </a>
             </li>
           </ul>
         </div>
       </section>
     </main>
 
-    <!-- Постійні клієнти -->
-    <section class="section clients">
-      <div class="container">
-        <h2 class="title clients-title">Постійні клієнти</h2>
-        <ul class="list clients-list">
-          <li class="item">
-            <a class="link-icon" href="">
-              <svg class="icon-clients" width="106" height="60">
-                <use href="./img/symbol-defs.svg#icon-logo-1"></use>
-              </svg>
-            </a>
-          </li>
-          <li class="item">
-            <a class="link-icon" href="">
-              <svg class="icon-clients" width="106" height="60">
-                <use href="./img/symbol-defs.svg#icon-logo-2"></use>
-              </svg>
-            </a>
-          </li>
-          <li class="item">
-            <a class="link-icon" href="">
-              <svg class="icon-clients" width="106" height="60">
-                <use href="./img/symbol-defs.svg#icon-Logo-3"></use>
-              </svg>
-            </a>
-          </li>
-          <li class="item">
-            <a class="link-icon" href="">
-              <svg class="icon-clients" width="106" height="60">
-                <use href="./img/symbol-defs.svg#icon-logo-4"></use>
-              </svg>
-            </a>
-          </li>
-          <li class="item">
-            <a class="link-icon" href="">
-              <svg class="icon-clients" width="106" height="60">
-                <use href="./img/symbol-defs.svg#icon-logo-5"></use>
-              </svg>
-            </a>
-          </li>
-          <li class="item">
-            <a class="link-icon" href="">
-              <svg class="icon-clients" width="106" height="60">
-                <use href="./img/symbol-defs.svg#icon-logo-6"></use>
-              </svg>
-            </a>
-          </li>
-        </ul>
-      </div>
-    </section>
-
     <!-- Футер сайту -->
     <footer class="site-footer">
       <div class="container flex-container">
         <div class="footer-contacts">
           <a class="link logo" href="./index.html"><span>Web</span>Studio</a>
-          <address class="address">
-            <ul class="list">
-              <li class="item"><span>м. Київ, пр-т Лесі Українки, 26</span></li>
+          <address>
+            <ul class="list address">
+              <li class="item">
+                <a class="link address" href=""
+                  >м. Київ, пр-т Лесі Українки, 26</a
+                >
+              </li>
               <li class="item">
                 <a class="link mail" href="mailto:info@devstudio.com"
                   >info@devstudio.com</a
