--- a/portfolio.html
+++ b/portfolio.html
@@ -28,10 +28,10 @@
           <a class="link logo" href="./index.html"><span>Web</span>Studio</a>
           <ul class="list site-nav">
             <li class="item">
-              <a class="link current" href="./index.html">Студія</a>
+              <a class="link" href="./index.html">Студія</a>
             </li>
             <li class="item">
-              <a class="link" href="./portfolio.html">Портфоліо</a>
+              <a class="link current" href="./portfolio.html">Портфоліо</a>
             </li>
             <li class="item">
               <a class="link" href="./contacts.html">Контакти</a>
